Use default 'koha','kohaclone' user & checkout.
* Dockerfile: bump base requirement to tag v2. Change user to
  koha. checkout to kohaclone. Adjust rest of script accordingly,
  improve documentation.
* aux/docker-entrypoint.sh: change user.
* aux/koha-dev/misc/koha-install-log: adapt according to user &
  checkout.
* aux/koha-httpd.conf: adapt according to user & checkout.
* aux/koha-index-daemon-ctl.sh: adapt according to user & checkout.
* aux/koha-zebra-ctl.sh: adapt according to user & checkout.

--- a/aux/koha-httpd.conf
+++ b/aux/koha-httpd.conf
@@ -5,18 +5,18 @@
 ## OPAC
 <VirtualHost *:80>
    ServerAdmin  webmaster@064f0e1ce709
-   DocumentRoot /home/koha-dev/Koha/koha-tmpl
+   DocumentRoot /home/koha/kohaclone/koha-tmpl
    ServerName 064f0e1ce709
 #  ServerAlias opac.mydomain.com
-   ScriptAlias /cgi-bin/koha/ "/home/koha-dev/Koha/opac/"
-   ScriptAlias /index.html "/home/koha-dev/Koha/opac/opac-main.pl"
-   ScriptAlias /opac-search.pl "/home/koha-dev/Koha/opac/opac-search.pl"
-   ScriptAlias /search "/home/koha-dev/Koha/opac/opac-search.pl"
-   ErrorLog /home/koha-dev/koha-dev/var/log/koha-opac-error_log
-#  CustomLog /home/koha-dev/koha-dev/var/log/koha-opac-access.log combined
-#  TransferLog /home/koha-dev/koha-dev/var/log/koha-opac-access.log
-   SetEnv KOHA_CONF "/home/koha-dev/koha-dev/etc/koha-conf.xml"
-   SetEnv PERL5LIB "/home/koha-dev/Koha"
+   ScriptAlias /cgi-bin/koha/ "/home/koha/kohaclone/opac/"
+   ScriptAlias /index.html "/home/koha/kohaclone/opac/opac-main.pl"
+   ScriptAlias /opac-search.pl "/home/koha/kohaclone/opac/opac-search.pl"
+   ScriptAlias /search "/home/koha/kohaclone/opac/opac-search.pl"
+   ErrorLog /home/koha/koha-dev/var/log/koha-opac-error_log
+#  CustomLog /home/koha/koha-dev/var/log/koha-opac-access.log combined
+#  TransferLog /home/koha/koha-dev/var/log/koha-opac-access.log
+   SetEnv KOHA_CONF "/home/koha/koha-dev/etc/koha-conf.xml"
+   SetEnv PERL5LIB "/home/koha/kohaclone"
    SetEnv MEMCACHED_SERVERS ""
    SetEnv MEMCACHED_NAMESPACE ""
 
@@ -27,12 +27,12 @@
    # OVERRIDE_SYSPREF_NAMES for your staff intranet vhost
    # SetEnv OVERRIDE_SYSPREF_PrefName Value
 
-   <Directory "/home/koha-dev/Koha/koha-tmpl">
+   <Directory "/home/koha/kohaclone/koha-tmpl">
       Options -Indexes
    </Directory>
 
    # Secure internal stuff
-   <DirectoryMatch "/home/koha-dev/Koha/koha-tmpl/.*/(modules|xslt|includes)">
+   <DirectoryMatch "/home/koha/kohaclone/koha-tmpl/.*/(modules|xslt|includes)">
       Order deny,allow
       Deny from all
    </DirectoryMatch>
@@ -104,7 +104,7 @@
      RewriteEngine On
 
      # Uncomment to turn on rewrite logging
-     #RewriteLog /home/koha-dev/koha-dev/var/log/koha-opac-rewrite.log
+     #RewriteLog /home/koha/koha-dev/var/log/koha-opac-rewrite.log
      #RewriteLogLevel 1
 
      RewriteCond %{QUERY_STRING} (.*?)(?:[A-Za-z0-9_-]+)=&(.*)
@@ -118,17 +118,17 @@
 ## Intranet
 <VirtualHost *:8080>
    ServerAdmin webmaster@064f0e1ce709
-   DocumentRoot /home/koha-dev/Koha/koha-tmpl
+   DocumentRoot /home/koha/kohaclone/koha-tmpl
    ServerName 064f0e1ce709:8080
 #  ServerAlias intranet.mydomain.com
-   ScriptAlias /cgi-bin/koha/ "/home/koha-dev/Koha/"
-   ScriptAlias /index.html "/home/koha-dev/Koha/mainpage.pl"
-   ScriptAlias /search "/home/koha-dev/Koha/search.pl"
-   Alias /plugin/ "/home/koha-dev/koha-dev/var/lib/plugins/"
-   ErrorLog /home/koha-dev/koha-dev/var/log/koha-error_log
-#  TransferLog /home/koha-dev/koha-dev/var/log/koha-access.log
-   SetEnv KOHA_CONF "/home/koha-dev/koha-dev/etc/koha-conf.xml"
-   SetEnv PERL5LIB "/home/koha-dev/Koha"
+   ScriptAlias /cgi-bin/koha/ "/home/koha/kohaclone/"
+   ScriptAlias /index.html "/home/koha/kohaclone/mainpage.pl"
+   ScriptAlias /search "/home/koha/kohaclone/search.pl"
+   Alias /plugin/ "/home/koha/koha-dev/var/lib/plugins/"
+   ErrorLog /home/koha/koha-dev/var/log/koha-error_log
+#  TransferLog /home/koha/koha-dev/var/log/koha-access.log
+   SetEnv KOHA_CONF "/home/koha/koha-dev/etc/koha-conf.xml"
+   SetEnv PERL5LIB "/home/koha/kohaclone"
    SetEnv MEMCACHED_SERVERS ""
    SetEnv MEMCACHED_NAMESPACE ""
    Options +FollowSymLinks
@@ -144,12 +144,12 @@
    ErrorDocument 404 /cgi-bin/koha/errors/404.pl
    ErrorDocument 500 /cgi-bin/koha/errors/500.pl
 
-   <Directory "/home/koha-dev/Koha/koha-tmpl">
+   <Directory "/home/koha/kohaclone/koha-tmpl">
       Options -Indexes
    </Directory>
 
    # Secure internal stuff
-   <DirectoryMatch "/home/koha-dev/Koha/koha-tmpl/.*/(modules|xslt|includes)">
+   <DirectoryMatch "/home/koha/kohaclone/koha-tmpl/.*/(modules|xslt|includes)">
       Order deny,allow
       Deny from all
    </DirectoryMatch>
@@ -206,7 +206,7 @@
      RewriteEngine On
 
      # Uncomment to turn on rewrite logging
-     #RewriteLog /home/koha-dev/koha-dev/var/log/koha-intranet-rewrite.log
+     #RewriteLog /home/koha/koha-dev/var/log/koha-intranet-rewrite.log
      #RewriteLogLevel 1
 
      RewriteCond %{QUERY_STRING} (.*?)(?:[A-Za-z0-9_-]+)=&(.*)
